--- a/History.txt
+++ b/History.txt
@@ -1,4 +1,4 @@
-=== (in Git)
+=== 1.3.0 / 2009-12-29
 
 * Enhancements
   * Usage of Hoe and rake-compiler to ease releasing and extension
@@ -14,6 +14,8 @@
 
       current_cp = Win32::Console::OutputCP()
       Iconv.iconv("cp#{current_cp}", "utf-8", utf_string)
+
+    A working example can be seen here: http://gist.github.com/265593
 
 === 1.2.0 / 2008-11-22
 
