--- a/History.txt
+++ b/History.txt
@@ -1,4 +1,9 @@
-=== 1.3.0.beta
+=== 1.3.0.beta2
+
+* Enhancements
+  * Redirect STDERR to be processed also for ANSI codes. Closes GH-4
+
+=== 1.3.0.beta1
 
 * Enhancements
   * Usage of Hoe and rake-compiler to ease releasing and extension
