--- a/History.txt
+++ b/History.txt
@@ -1,7 +1,8 @@
-=== 1.3.0.beta2
+=== 1.3.0.beta2 / 2010-03-07
 
 * Enhancements
   * Redirect STDERR to be processed also for ANSI codes. Closes GH-4
+  * Allow ECHO to be displayed [jloveces]
 
 === 1.3.0.beta1
 
