--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+=== 1.3.0.beta3 / 2010-03-12
+
+* Bugfixes
+  * Properly catch coloring when using autospec in Ruby 1.9 [vertiginous]
+    Closes GH-3
+
 === 1.3.0.beta2 / 2010-03-07
 
 * Enhancements
