--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== (In Git)
+
+* Enhancements:
+  * Maintain Fore and background colors [kbarber & vertigious]
+
 === 1.3.0 / 2010-03-14
 
 * Enhancements
